# Clawssistant

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  config.example.yaml  docker-compose.test.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: agent-blog.yml  agent-deploy.yml  agent-develop.yml  agent-orchestrator.yml  agent-qa.yml  agent-review.yml  agent-security.yml  agent-triage.yml  agent-wildcard.yml  ci.yml  pages.yml
agents/: __init__.py  agents.yaml  base.py  config.py  context.py  dispatch.py  github_ops.py  state.py
agents/roles/: __init__.py  blog.py  engineer.py  orchestrator.py  pm.py  qa.py  reviewer.py  security.py  triad.py  triage.py  wildcard.py
agents/scripts/: __main__.py  run_agent.py
docs/: AGENTIC_WORKFLOW.md  ARCHITECTURE.md
docs/blog/: _config.yml  index.md
docs/blog/_layouts/: default.html  post.html
tests/: conftest.py
tests/fixtures/: mosquitto.conf  sample_config.yaml
tests/unit/: test_brain.py  test_config.py  test_homeassistant.py  test_security.py  test_voice.py
